--- a/tackle_server/package.json
+++ b/tackle_server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsx server.ts",
     "dev": "tsx watch server.ts",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "test": "jest --runInBand"
   },
   "keywords": [],
